--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org">
+<html xmlns:th="http://thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorate="~{layout}">
 <head>
-<meta charset="ISO-8859-1">
-<link rel="stylesheet" href="../static/css/bootstrap.min.css"
-	th:href="@{css/bootstrap.min.css}">
-<title>BazarChic</title>
+<meta charset="UTF-8">
+
+<title>Bazar</title>
 </head>
 <body>
-	<div class="container">
-		<table class="table">
-			<tr>
-				<th>Id</th>
-				<th>Description</th>
-				<th>Price</th>
-			</tr>
-			<tr th:each="a:${listArticle}">
-				<td th:text="${a.id}"></td>
-				<td th:text="${a.description}"></td>
-				<td th:text="${a.price}"></td>
-			</tr>
-		</table>
-		<ul class="pagination">
-			<li class = "page-item" th:class="${currentPage==status.index}?'active':''" th:each="page,status:${pages}">
-				<a class="page-link" th:href="@{/index(page=${status.index})}" th:text="${status.index}"></a>
-			</li>
-		</ul>
+	<div layout:fragment="content">
+		<div class="card" >
+			<div class="card-heading">Liste des articles</div>
+			<div class="card-body">
+				<form th:action="@{/index}" method="get">
+					<label>keyword</label> <input type="text" name="keyword" th:value="${keyword}">
+					<button type="submit" class="btn btn-primary">Search</button>
+				</form>
+				<table class="table">
+					<thead class="thead">
+						<tr>
+							<td>Id</td>
+							<td>Description</td>
+							<td>Price</td>
+							<td>Delete</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="a:${listArticle}">
+							<td th:text="${a.id}"></td>
+							<td th:text="${a.description}"></td>
+							<td th:text="${a.price}"></td>
+							<td><a class="btn btn-danger"
+								th:href="@{/delete(id=${a.id}, page=${currentPage}, keyword=${keyword})}">Delete</a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+				<ul class="pagination">
+					<li class="page-item"
+						th:class="${currentPage==status.index}?'active':''"
+						th:each="page,status:${pages}"><a class="page-link"
+						th:href="@{/index(page=${status.index},keyword=${keyword})}"
+						th:text="${status.index}"></a></li>
+				</ul>
+			</div>
+		</div>
 	</div>
-
 </body>
 </html>
